src/test/deca/context/invalid/created/rule2.7/withaout_same_param.deca
// Résultat erreur:
//    20:4
//    Signature de méthode ou type de retour non conforme lors de la redéfinition (règle 2.7)
//
// Description:
//    Tests de programme incorrect contextuellement (redéfinition de méthode incorrecte)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class SuperClasse {
    int maMethode() {
        return 0;
    }
}

class SousClasse extends SuperClasse {
    float maMethode() { 
        return 0.0;
    }
}
